--- a/Cerit-SP/scss/_components-edited.scss
+++ b/Cerit-SP/scss/_components-edited.scss
@@ -121,6 +121,16 @@ h5 {
 a {
   font-weight: $font-weight-bold;
   @include transition(color 0.1s ease);
+  
+  //class pro kotvy a jejich posun od horního okraje, překrývá ji pak main-bar
+  &.anchor {
+    /*&:before {
+      display: block; 
+      content: " "; 
+      top: 120px; 
+      visibility: hidden;
+    }*/
+  }
     
   &.facebook {
     &:hover { 
