--- a/FSS/scss/_mixins.scss
+++ b/FSS/scss/_mixins.scss
@@ -78,12 +78,14 @@
     &.r2x1  { padding-top: 50%; }  // prozatím převod modulů na 2:1 pro small
     &.r8x3  { padding-top: 50%; }
     &.r16x9 { padding-top: 50%; }
+    &.r16x3 { padding-top: 50%; }
     
     @media #{$medium-up} {
       &.r1x1  { padding-top: 100%; }
       &.r2x1  { padding-top: 50%; }      
       &.r8x3  { padding-top: 37.5%; }
       &.r16x9 { padding-top: 56.25%; }
+      &.r16x3 { padding-top: 18.75%; }
     }
 }
 
