Google fonts přes https

--- a/FSS/scss/_settings.scss
+++ b/FSS/scss/_settings.scss
@@ -57,7 +57,7 @@
 
 // Allows the use of rem-calc() or lower-bound() in your settings
 @import "../bower_components/foundation/scss/foundation/functions";
-@import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700|PT+Sans+Narrow:400,700|PT+Serif:400,700,400italic&subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=PT+Sans:400,700|PT+Sans+Narrow:400,700|PT+Serif:400,700,400italic&subset=latin,latin-ext);
 
 // The default font-size is set to 100% of the browser style sheet (usually 16px)
 // for compatibility with browser-based text zoom or user-set defaults.
