--- a/FSS/scss/settings/_settings-19-orbit.scss
+++ b/FSS/scss/settings/_settings-19-orbit.scss
@@ -19,7 +19,7 @@
  $orbit-nav-arrow-color-hover: $gray-color;
 
 // We use these to control the timer styles
-// $orbit-timer-bg: rgba(255,255,255,0.3);
+ $orbit-timer-bg: rgba(255,255,255,0);
  $orbit-timer-show-progress-bar: false;
 
 // We use these to control the bullet nav styles
