--- a/FSS/scss/settings/_settings-e-typography.scss
+++ b/FSS/scss/settings/_settings-e-typography.scss
@@ -6,7 +6,7 @@
 // We use these to control header font styles
  $header-font-family: $body-font-family;
  $header-font-weight: $font-weight-normal;
-// $header-font-style: normal;
+ $header-font-style: normal;
  $header-font-color: $body-font-color;
  $header-line-height: 3rem;
  $header-top-margin: 1.5rem;
