--- a/FSS/scss/_components-edited.scss
+++ b/FSS/scss/_components-edited.scss
@@ -214,10 +214,10 @@
   }
 
   &.green2 {
-    background: $myrtle-grenn-color;
+    background: $myrtle-green-color;
     color: $white;
     &:hover {
-      background: scale-color($myrtle-grenn-color, $lightness: $button-function-factor);
+      background: scale-color($myrtle-green-color, $lightness: $button-function-factor);
     }
   }
 
@@ -312,7 +312,7 @@ h1, h2, h3, h4, h5, h6, p, span {
   &.orange { color: $alloy-orange-color; }
   &.yellow { color: $goldenrod-yellow-color; }
   &.green { color: $avocado-green-color; }
-  &.green2 { color: $myrtle-grenn-color; }
+  &.green2 { color: $myrtle-green-color; }
   &.blue { color: $blue-color; }
   &.blue2 { color: $darkblue-color; }
   &.purple { color: $royal-purple-color; }
@@ -343,7 +343,7 @@ h1, h2, h3, h4, h5, h6, p, span {
     &-orange { @include bgrd($alloy-orange-color); }
     &-yellow { @include bgrd($goldenrod-yellow-color); }
     &-green { @include bgrd($avocado-green-color); }
-    &-green2 { @include bgrd($myrtle-grenn-color); }
+    &-green2 { @include bgrd($myrtle-green-color); }
     &-blue { @include bgrd($blue-color); }
     &-blue2 { @include bgrd($darkblue-color); }
     &-purple { @include bgrd($royal-purple-color); }
@@ -492,10 +492,10 @@ dl, ul {
     border-bottom: 1px solid $tab-border-active-color;
     dd, li {
      &.tab-title {
-      margin: rem-calc(0 10 0 0);
+      margin: rem-calc(0 5 0 0);
         
       &:first-child {
-        margin-left: rem-calc(10);
+        margin-left: rem-calc(5);
       }
       
       a {
@@ -507,7 +507,7 @@ dl, ul {
         border-right: 1px solid $tab-border-color;
         border-left: 1px solid $tab-border-color;
         margin-top: rem-calc(5);
-        padding: rem-calc(5 25);
+        padding: rem-calc(5 10);
           
         &:hover {
           color: $white;
@@ -517,7 +517,7 @@ dl, ul {
         }
           
         @media #{$large-up} {
-          padding: rem-calc(10 25);
+          padding: rem-calc(5 15);
         }
       }
         
@@ -529,19 +529,17 @@ dl, ul {
           border-bottom: 1px solid $gray-very-light-color;
           margin-top: 0;
           margin-bottom: -1px;
-          padding: rem-calc(10 25 5 25);
+          padding: rem-calc(10 10 5 10);
           
           &:hover{
-            //background: $secondary-color;
             color: $secondary-color;
             border-top: 1px solid $tab-border-active-color;
             border-right: 1px solid $tab-border-active-color;
             border-left: 1px solid $tab-border-active-color;
-            //border-bottom: 1px solid $secondary-color;
           }
             
           @media #{$large-up} {
-            padding: rem-calc(15 25 10 25);
+            padding: rem-calc(10 15 5 15);
           }
         }
        }
@@ -624,74 +622,141 @@ table {
 
 // g. Orbit
 
-.orbit-container {
-    li {
-      list-style-image: none !important;
-    }
-    
-  .orbit-slides-container {
-      
-    .slide-content {
-      padding: rem-calc(35);
-        
-      h3 {
-        font-size: rem-calc(17);
-        font-family: $font-family-sans-serif;
-        font-weight: $font-weight-bold;
-        text-transform: uppercase;
-      }
-      h4 {
-        font-size: rem-calc(15);
-        font-weight: $font-weight-bold;
-      }
-      p {
-        font-weight: $font-weight-normal;
-      }
-    }
-      
-    .orbit-caption {
-      padding: rem-calc(10 0);
-      background: transparent;
-      h3 {
-        font-size: rem-calc(15);
-        font-family: $font-family-sans-serif;
-        font-weight: $font-weight-bold;
-        line-height: 1.5em;
-        text-transform: uppercase;
-      }
-      font-size: rem-calc(13);
-    }
-  }
-    
-  .orbit-prev,
-  .orbit-next {
-    top: 25%;
-    margin-top: 0; 
-    width: 20px;
-    height: 20px;
-    @include radius($radius:20px);
-      
-      & > span {
-          width: 0;
-          height: 0;
-          border: none;
+.vertical-orbit {
+    .orbit-container {
+        li {
+          list-style-image: none !important;
         }
-  }
-  .orbit-prev {
-    background: rgba(0, 0, 0, 0.05) url('../images/orbit-arrow-left.svg') no-repeat center center;
-    background-size: 9px;
-      &:hover {
-        background-color: rgba(0, 0, 0, 0.2);
+
+      .orbit-slides-container {
+
+        .slide-content {
+          padding: rem-calc(35);
+
+          h3 {
+            font-size: rem-calc(17);
+            font-family: $font-family-sans-serif;
+            font-weight: $font-weight-bold;
+            text-transform: uppercase;
+          }
+          h4 {
+            font-size: rem-calc(15);
+            font-weight: $font-weight-bold;
+          }
+          p {
+            font-weight: $font-weight-normal;
+          }
+        }
+
+        .orbit-caption {
+          padding: rem-calc(10 0);
+          background: transparent;
+          h3 {
+            font-size: rem-calc(15);
+            font-family: $font-family-sans-serif;
+            font-weight: $font-weight-bold;
+            line-height: 1.5em;
+            text-transform: uppercase;
+          }
+          font-size: rem-calc(13);
+        }
       }
-  }
-  .orbit-next {
-    background: rgba(0, 0, 0, 0.05) url('../images/orbit-arrow-right.svg') no-repeat center center;
-    background-size: 9px;
-      &:hover {
-        background-color: rgba(0, 0, 0, 0.2);
+
+      .orbit-prev, .orbit-next {
+        top: 25%;
       }
+        
+      .orbit-prev {
+        left: 0;
+        @include translate(0, -30px);
+      }
+    
+      .orbit-next {
+        right: 0;
+        @include translate(0, -30px);
+      }
+
+      .orbit-timer {
+        display: none;
+        visibility: none;
+      }
+    
+      .orbit-bullets {
+        top: 0;
+      }
+        
   }
 }
+
+.orbit-container {
+        li {
+          list-style-image: none !important;
+        }
+
+      .orbit-prev, .orbit-next, .orbit-timer {
+        background: none;
+        height: 30px;
+        margin-top: 0; 
+        top: 45%;
+        width: 30px;
+        z-index: 8000;
+        @include radius($radius:50%);
+        @include transition(background-color 0.2s ease);
+
+        & > span {
+          visibility: hidden;
+          display: none;
+        }
+          
+      }
+    
+      .orbit-prev {
+        left: 50%;
+        @include translate(-200%, -30px);
+      }
+    
+      .orbit-next {
+        right: 50%;
+        @include translate(200%, -30px);
+      }
+
+      .orbit-timer {
+        right: 50%;
+        cursor: pointer;
+        @include translate(50%, -30px);
+      }
+    
+      .orbit-bullets {
+        top: 0;
+      }
+    
+    &:hover, &:focus {
+       .orbit-prev, .orbit-next, .orbit-timer {
+         border: 2px solid white;
+       }
+        
+       .orbit-prev {
+         background: $secondary-color url('../images/orbit-arrow-left.svg') no-repeat 7px center;
+         background-size: 12px;
+       }
+    
+       .orbit-next {
+         background: $secondary-color url('../images/orbit-arrow-right.svg') no-repeat 8px center;
+         background-size: 12px;
+       } 
+        
+       .orbit-timer {
+          background: $secondary-color url('../images/orbit-play.svg') no-repeat 8px center;
+          background-size: 12px;
+        
+          &.paused {
+            background: $secondary-color url('../images/orbit-pause.svg') no-repeat 7px center;
+            background-size: 12px;
+          }
+       }
+    }
+  }
+
 
 // -----------------------------------------------------------------------
 
@@ -786,6 +851,35 @@ table {
             color: $topbar-parentlink-color-hover;
           }
       } 
+    
+      &.has-form {
+        
+        input {
+          background: none;
+          border: 1px solid transparent;
+          border-color:$primary-light-color;
+          box-shadow: none;
+          color: $white;
+          margin-top: rem-calc(5);
+        }
+        
+        .button {
+          border: none;
+          color: $primary-light-color;
+          margin: 0;
+          padding: 0;
+            
+          &:hover {
+            background: transparent;
+            color: $white;
+          }
+            
+          .fa {
+            margin: 0;
+            padding: 0;
+          }
+        }
+      }
     }
   }
 }
@@ -913,7 +1007,7 @@ table {
             
         }
           
-        &.hide-dropdown {
+        &.hide-dropdown, &.hide-dropdown-tablet {
           .has-dropdown {
             .dropdown {
               display: none !important;
@@ -1063,8 +1157,8 @@ blockquote {
   }
     
   &.green2 {
-    @include panel($bg:$myrtle-grenn-color);
-    border: 1px solid scale-color($myrtle-grenn-color, $lightness:-20%);
+    @include panel($bg:$myrtle-green-color);
+    border: 1px solid scale-color($myrtle-green-color, $lightness:-20%);
   }
     
   &.blue {
@@ -1129,6 +1223,7 @@ blockquote {
 
 .main-bar {
   line-height: normal;
+  margin-bottom: rem-calc(30) !important;  
     
   .title-area {
     background: $mainbar-title-area-bg;
@@ -1172,11 +1267,12 @@ blockquote {
 }
 
 .fixed {
-    &.contain-to-grid-main {
-      border-bottom: $mainbar-border;
-      top: 0; //$topbar-height;
+  &.contain-to-grid-main {
+    border-bottom: $mainbar-border;
+    top: 0; //$topbar-height;
+      
     .main-bar {
-      margin-bottom: 0;  
+      margin-bottom: 0 !important;  
     } 
   }
 }
@@ -1184,7 +1280,7 @@ blockquote {
 @media #{$mainbar-media-query} {
     
     .main-bar {
-        
+
         .main-bar-section {
             
           ul {
@@ -1324,6 +1420,36 @@ blockquote {
 .pagination {
   li a {
     text-decoration: none;
+  }
+}
+
+
+// -----------------------------------------------------------------------
+
+
+// q. Alert Boxes
+
+.alert-box.agreement {
+  background: none;
+  border: none;
+  margin-top: $alert-bottom-margin / 2;
+  margin-bottom: $alert-bottom-margin / 2;
+
+  p {
+    padding-right: 15%;
+    font-size: 1em;
+    margin-bottom: 0;
+  }
+    
+  .close {
+    @include alert-close();
+    margin: rem-calc(0 5 0 20);
+    font-size: 1em;
+    opacity: 1;
+    color: $white;
+    padding: rem-calc(8);
+    border: 1px solid scale-color($secondary-color, $lightness: -20%);
+    @include translate(0, -50%);
   }
 }
 
