--- a/FSS/scss/settings/_settings-a-base.scss
+++ b/FSS/scss/settings/_settings-a-base.scss
@@ -5,7 +5,7 @@
 // $rem-base: 16px;
 
 // Allows the use of rem-calc() or lower-bound() in your settings
-@import "../bower_components/foundation/scss/foundation/functions";
+@import "../../bower_components/foundation/scss/foundation/functions";
 @import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic|PT+Sans+Narrow:400,700|PT+Serif:400,700,400italic&subset=latin,latin-ext);
 
 // The default font-size is set to 100% of the browser style sheet (usually 16px)
