--- a/FSS/scss/settings/_settings-f-colors.scss
+++ b/FSS/scss/settings/_settings-f-colors.scss
@@ -29,7 +29,11 @@
  
  $secondary-color: rgb(199, 75, 62);  //oranžová FSS hover efekty
  $third-color:     rgb(18, 117, 178); //modrá FSS url
- 
+
+ $topheader-colorstop-1: rgb(0, 107, 91);
+ $topheader-colorstop-2: rgb(0, 129, 105);
+ $topheader-colorstop-3: rgb(0, 123, 105);   // basic barva pozadí - největší plocha
+
  $gray-color:                rgb(71, 71, 71); //šedá FSS, H1 nadpis
  $gray-transparent-color:    rgba($gray-color, 0.85); //tmavší šedá s průhledností pro pozadí nadpisů v blocích a modulech
  $gray-dark-color:           rgb(42, 42, 42);
@@ -42,7 +46,7 @@
  $alloy-orange-color:      rgb(212, 115, 36);
  $goldenrod-yellow-color:  rgb(209, 158, 13);
  $avocado-green-color:     rgb(81, 148, 63);
- $myrtle-grenn-color:      rgb(27, 143, 127);
+ $myrtle-green-color:      rgb(27, 143, 127);
  $blue-color:              rgb(0, 151, 212);
  $darkblue-color:          rgb(35, 104, 173);
  $royal-purple-color:      rgb(125, 108, 166);
